@@ -11,12 +11,13 @@ import org.apache.axiom.om.util.AXIOMUtil;
 import org.apache.commons.lang3.StringUtils;
 import org.simpleframework.xml.core.Persister;
 
-import javax.xml.bind.DatatypeConverter;
 import javax.xml.stream.XMLStreamException;
 import java.io.BufferedReader;
 import java.io.ByteArrayInputStream;
 import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
 import java.rmi.RemoteException;
+import java.util.Base64;
 import java.util.zip.GZIPInputStream;
 
 public class WSDistribuicaoNFe {
@@ -30,16 +31,16 @@ public class WSDistribuicaoNFe {
     /**
      * Metodo para consultar os dados das notas fiscais por chave de acesso ou NSU e retorna o objeto de retorno de distribuicao<br>
      */
-    public NFDistribuicaoIntRetorno consultar(final String cnpj, final DFUnidadeFederativa uf, final String chaveAcesso, final String nsu) throws Exception {
-        return consultar(cnpj, uf, chaveAcesso, nsu, null);
+    public NFDistribuicaoIntRetorno consultar(final String cpfOuCnpj, final DFUnidadeFederativa uf, final String chaveAcesso, final String nsu) throws Exception {
+        return consultar(cpfOuCnpj, uf, chaveAcesso, nsu, null);
     }
 
     /**
      * Metodo para consultar os dados das notas fiscais por chave de acesso ou NSU e retorna o objeto de retorno de distribuicao<br>
      */
-    public NFDistribuicaoIntRetorno consultar(final String cnpj, final DFUnidadeFederativa uf, final String chaveAcesso, final String nsu, final String ultNsu) throws Exception {
+    public NFDistribuicaoIntRetorno consultar(final String cpfOuCnpj, final DFUnidadeFederativa uf, final String chaveAcesso, final String nsu, final String ultNsu) throws Exception {
         try {
-            String xmlEnvio = this.gerarNFDistribuicaoInt(cnpj, uf, chaveAcesso, nsu, ultNsu).toString();
+            String xmlEnvio = this.gerarNFDistribuicaoInt(cpfOuCnpj, uf, chaveAcesso, nsu, ultNsu).toString();
 
             // valida o lote assinado, para verificar se o xsd foi satisfeito, antes de comunicar com a sefaz
             XMLValidador.validaConsultaDfe(xmlEnvio);
@@ -66,10 +67,10 @@ public class WSDistribuicaoNFe {
         if (conteudoEncode == null || conteudoEncode.length() == 0) {
             return "";
         }
-        //final byte[] conteudo = Base64.getDecoder().decode(conteudoEncode);//java 8
-        final byte[] conteudo = DatatypeConverter.parseBase64Binary(conteudoEncode);//java 7
+        final byte[] conteudo = Base64.getDecoder().decode(conteudoEncode);//java 8
+        //final byte[] conteudo = DatatypeConverter.parseBase64Binary(conteudoEncode);//java 7
         try (GZIPInputStream gis = new GZIPInputStream(new ByteArrayInputStream(conteudo))) {
-            try (BufferedReader bf = new BufferedReader(new InputStreamReader(gis, "UTF-8"))) {
+            try (BufferedReader bf = new BufferedReader(new InputStreamReader(gis, StandardCharsets.UTF_8))) {
                 StringBuilder outStr = new StringBuilder();
                 String line;
                 while ((line = bf.readLine()) != null) {
@@ -80,12 +81,17 @@ public class WSDistribuicaoNFe {
         }
     }
 
-    private NFDistribuicaoInt gerarNFDistribuicaoInt(final String cnpj, final DFUnidadeFederativa uf, final String chaveAcesso, final String nsu, final String ultNsu) {
+    private NFDistribuicaoInt gerarNFDistribuicaoInt(final String cpfOuCnpj, final DFUnidadeFederativa uf, final String chaveAcesso, final String nsu, final String ultNsu) {
         final NFDistribuicaoInt distDFeInt = new NFDistribuicaoInt();
         distDFeInt.setVersao("1.01");
         distDFeInt.setAmbiente(this.config.getAmbiente());
-        distDFeInt.setCnpj(cnpj);
         distDFeInt.setUnidadeFederativaAutor(uf);
+
+        if (cpfOuCnpj.length() == 11) {
+            distDFeInt.setCpf(cpfOuCnpj);
+        } else {
+            distDFeInt.setCnpj(cpfOuCnpj);
+        }
 
         if (StringUtils.isNotBlank(chaveAcesso)) {
             distDFeInt.setConsultaChaveAcesso(new NFDistribuicaoConsultaChaveAcesso().setChaveAcesso(chaveAcesso));
